# jax-privacy-rs

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/accounting/: Cargo.toml
crates/accounting/src/: accountants.rs  analysis.rs  calibrate.rs  compilation.rs  event.rs  lib.rs  params.rs  pld.rs  rdp.rs
crates/adapters/burn/: Cargo.toml
crates/adapters/burn/src/: lib.rs
crates/adapters/candle/: Cargo.toml
crates/adapters/tch/: Cargo.toml
crates/audit/: Cargo.toml
crates/audit/src/: auditor.rs  canary.rs  lib.rs  stats.rs
crates/core/: Cargo.toml
crates/core/src/: batch_selection.rs  clipping.rs  error.rs  lib.rs  noise.rs  pytree.rs  sampling.rs  sharding.rs  tensor.rs  transform.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/facade/: Cargo.toml
crates/facade/examples/: accountant_configs.rs  calibrate_mechanism.rs  canary_audit.rs  dpsgd_event.rs  dpsgd_plan.rs  dpsgd_runner.rs  execution_plan.rs  gaussian_privatizer.rs  keras_config.rs  optimal_batch_sizes.rs  pld_accountant.rs
crates/facade/src/: experimental.rs  keras.rs  lib.rs  training.rs
crates/facade/tests/: dpsgd_plan.rs  execution_plan.rs  gaussian_privatizer.rs  pytree_derive.rs
crates/mf/: Cargo.toml
crates/mf/src/: banded.rs  buffered_toeplitz.rs  checks.rs  dense.rs  lib.rs  noise.rs  optimization.rs  sensitivity.rs  streaming.rs  test_utils.rs  toeplitz.rs
crates/prng/: Cargo.toml
crates/prng/src/: lib.rs
docs/: adapters.md  contribution_guide.md  core_library.md  index.md  installation.md  introduction.md  library_design.md  overview.md  paper_reproductions.md  sharp_edges.md  support.md  troubleshooting.md
meta/: commit-log.md
