[workspace]
members = [
  "crates/facade",
  "crates/core",
  "crates/prng",
  "crates/accounting",
  "crates/mf",
  "crates/audit",
  "crates/derive",
  "crates/adapters/burn",
  "crates/adapters/candle",
  "crates/adapters/tch",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["OpenAI Codex"]

[workspace.dependencies]
ndarray = { version = "0.15", features = ["std"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
statrs = "0.16"
rustfft = "6"
approx = "0.5"
proptest = "1"
