[package]
name = "jax-privacy-accounting"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
serde = ["dep:serde", "jax-privacy-core/serde"]

[dependencies]
statrs.workspace = true
rustfft.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
jax-privacy-core = { path = "../core" }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
