[package]
name = "jax-privacy-audit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
serde = ["dep:serde", "jax-privacy-core/serde"]

[dependencies]
rand.workspace = true
rand_distr.workspace = true
statrs.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
jax-privacy-core = { path = "../core" }

[dev-dependencies]
approx.workspace = true
rand_chacha.workspace = true
