[package]
name = "jax-privacy-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
f32 = []
serde = ["dep:serde"]

[dependencies]
ndarray.workspace = true
rand.workspace = true
rand_distr.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
jax-privacy-prng = { path = "../prng" }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
rand_chacha.workspace = true
