[package]
name = "jax-privacy-mf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
serde = ["dep:serde", "jax-privacy-core/serde"]

[dependencies]
ndarray.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
jax-privacy-core = { path = "../core" }
rand.workspace = true
rand_distr.workspace = true
jax-privacy-prng = { path = "../prng" }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
